fixed title size on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,7 +30,7 @@ body {
     margin: 0;
 
     @media screen and (max-width: 890px) {
-      font-size: 70px;
+      font-size: 60px;
     }
   }
 
